welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:17: error: not found: value stop
	case _ => stop
                  ^